--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
 
   
- </div>
+<div class="content">
+  <input autofocus type="text" name="text" id="firstInput">
+</div>
 
 
   <script src="js/main.js">
